terraform-eks/php-deployment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php
  template:
    metadata:
      labels:
        app: php
    spec:
      containers:
      - name: php
        image: php:8.2.31-cli-alpine3.22
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: php-service
  namespace: production
spec:
  selector:
    app: php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
